--- a/index.html
+++ b/index.html
@@ -1,9 +1,267 @@
-<HTML>
-<HEAD>
-<TITLE>Hello World in HTML</TITLE>
-</HEAD>
-<BODY>
-<CENTER><H1>Hello World!</H1></CENTER>
-</BODY>
-</HTML>
+{% load staticfiles %}
+<!DOCTYPE HTML>
+<!--
+	Prologue by HTML5 UP
+	html5up.net | @n33co
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Madelin Lewis-Whitfield</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="{% static 'css/home_light.css' %}"/>
+		<script type="text/javascript" src="/scripts/styleswitcher.js"></script>
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body>
 
+		<!-- Header -->
+			<div id="header">
+
+				<div class="top">
+
+					<!-- Logo -->
+						<div id="logo">
+							<span class="image avatar48"><img src="{% static "myimages/profile/06.jpg" %}" alt="My image"/ ></span>
+							<h1 id="title">Madeline Lewis-Whitfield</h1>
+							<p>Computer Scientist</p>
+						</div>
+
+					<!-- Nav -->
+						<nav id="nav">
+							<!--
+
+								Prologue's nav expects links in one of two formats:
+
+								1. Hash link (scrolls to a different section within the page)
+
+								   <li><a href="#foobar" id="foobar-link" class="icon fa-whatever-icon-you-want skel-layers-ignoreHref"><span class="label">Foobar</span></a></li>
+
+								2. Standard link (sends the user to another page/site)
+
+								   <li><a href="http://foobar.tld" id="foobar-link" class="icon fa-whatever-icon-you-want"><span class="label">Foobar</span></a></li>
+
+							-->
+							<ul>
+								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li>
+								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
+								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
+							</ul>
+						</nav>
+
+				</div>
+
+				<div class="bottom">
+
+					<!-- Social Icons -->
+						<ul class="icons">
+							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+						</ul>
+
+				</div>
+
+			</div>
+
+		<!-- Main -->
+			<div id="main">
+
+				<!-- Intro -->
+					<section id="top" class="one dark cover">
+						<div class="container">
+
+							<header>
+								<h2 class="alt">Hi! I'm Madeline, a CS student<br />
+								and developer in the making.</h2>
+								<!-- background image (img) found in css background-image -->
+								<!--<p><font color = "white">Ligula scelerisque justo sem accumsan diam quis<br />
+								vitae natoque dictum sollicitudin elementum.</font></p>-->
+							</header>
+
+							<!--<footer>
+								<a href="#contact" class="button scrolly">Contact Me</a>
+							</footer>-->
+
+						</div>
+					</section>
+
+				 <!-- Portfolio -->
+                                        <section id="portfolio" class="three">
+                                                <div class="container">
+
+                                                        <header>
+                                                                <h2>Technical Skills/Experience</h2>
+                                                        </header>
+
+                                                        <!--<div class="image featured"><a href=""><img src="" alt="My image"/ width="300" height="400"/></a></div>-->
+
+                                                        <p>I am currently a junior at the California State University of Sacramento and am
+																												working towards earning my Bachelor's Degree in Computer Science as well as a
+																												certificate in Software Engineering. I work as a developer for the <a href = "http://www.csus.edu/storc/">STORC</a>
+																												organization of CSUS and create and maintain Flask applications that dynamically
+																												displays critical data which is used by the <a href = "http://www.csus.edu/storc/">STORC</a>
+																												scientists as they grow plants using a hydroponic system.<br><br>
+
+																												The majority of my background is in Java, due to the CSUS curriculum, but through
+																												my work as well as outside projects I have gained experience in the Python, BASH, HTML,
+																												CSS, and JavaScript languages as well as the Django and Flask web frameworks.
+																												My real passion lies in creating a product that serves to benefit the environment
+																												or people in need and, post-graduation, I hope to join a company whose interests align
+																												with mine.<br>
+
+																												<table>
+																												  <tr>
+																												    <td><a href = "https://github.com/maddz131">My GitHub</a></td>
+																												    <td><a href = "http://127.0.0.1:8000/blog">Resume/Project Summarys</a></td>
+																												    <td><a href = "http://athena.ecs.csus.edu/~aitkenc/aboutus.html">STORC Developer Team Page</a></td>
+																												  </tr>
+																												</table>
+																											</p>
+                                        </section>
+
+				<!-- About Me -->
+																				<section id="about" class="two">
+																					<div class="container">
+
+																						<header>
+																							<h2>Personal Interests</h2>
+																						</header>
+
+																						<p>I have a wide range of interests and have been blessed with many opportunities
+																							 to explore them throughout my life. jkguf gjg uyg h; uyfytd r goyhi gu yf hjhg
+																							 yfghhjkj huhk kjhk jg8yg jyg tyd7tf uhoihjk jlj jo ugj gkjkj pijp 'j;'lj ljlkjl
+																							 jgjhfuhg iugjh iuhkjh kj'lkj pij iuh yg jhgkjh ;kj.
+																							 <table>
+																								 <td>
+																									<p align="left"><bold>Travel:</bold><br> I love to travel, and because of my mom's
+																							 	 	equal wanderlust, I have been to Africa (Ethopia, Tanzania, Morroco),
+																									Central America (Guatemala), and Europe (Italy, Spain), as well
+																							 		as many of the States. The new perspective that comes with firsthand
+																									exposure to a different culture is something I think everyone should have
+																									the opportunity to experience.<br><br>
+																									<bold>Spanish:</bold><br> I have an intermediate understanding of the Spanish language
+																							 		and am finishing my fourth year of it this fall. I plan on taking another course
+																							 		in the Spring semester as well, with the hope of working and living in Spain at some
+																							 		point in the near future.</p>
+																						 		</td>
+																								<td>
+																									<p align="left"><bold>Yoga:</bold><br> I was first introduced to yoga in 2014 by a friend who
+																									wanted to try a new method of working out. She quickly realized that it was not for
+																									her, however I have been doing it ever since. Originally I enjoyed it because
+																									of physical challenge it presented, and later turned to it to help with my
+																									anxiety, and after two years it has become a very valued part of my life and
+																									routine. It's focus on self-love and the peace that comes from weekly meditation
+																									is just as important to me as my growing ability to do cool and complex poses.</p>
+																								</td>
+																							</table>
+																						</p>
+
+							<div class="row">
+								<div class="4u 12u$(mobile)">
+									<article class="item">
+										<a href="#" class="image fit"><img src="{% static "myimages/yoga02.jpg" %}" alt="My image"/></a>
+										<header>
+											<!--<h3>King Pigeon</h3>-->
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="{% static "myimages/plantlight.jpg" %}" alt="My image"/></a>
+										<header>
+											<h3>Aloe</h3>
+										</header>
+									</article>
+								</div>
+								<div class="4u 12u$(mobile)">
+									<article class="item">
+										<a href="#" class="image fit"><img src="{% static "myimages/granada.jpg" %}" alt="My image"/></a>
+										<header>
+											<h3>Granada, Spain</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="{% static "myimages/profile.jpg" %}" alt="My image"/></a>
+										<header>
+											<h3> Shadows from a Marrakech Window</h3>
+										</header>
+									</article>
+								</div>
+								<div class="4u$ 12u$(mobile)">
+									<article class="item">
+										<a href="#" class="image fit"><img src="{% static "myimages/backpacking.jpg" %}" alt="My image"/></a>
+										<header>
+											<!--<h3>Backpacking</h3>-->
+										</header>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="{% static "myimages/ouzazate.jpg" %}" alt="My image"/></a>
+										<header>
+											<h3>Ouzazate, Morroco</h3>
+										</header>
+									</article>
+								</div>
+							</div>
+
+						</div>
+					</section>
+
+				<!-- Contact -->
+					<section id="contact" class="four">
+						<div class="container">
+
+							<header>
+								<h2 class = "c"> Contact</h2>
+							</header>
+
+							<p>
+								<table>
+									<td>Phone: (559) 789-5286</td>
+									<td>E-mail: m.lewiswhitfield@gmail.com</td>
+								</table>
+							</p>
+
+							<form method="post" action="#">
+								<div class="row">
+									<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
+									<div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
+									<div class="12u$">
+										<textarea name="message" placeholder="Message"></textarea>
+									</div>
+									<div class="12u$">
+										<input type="submit" value="Send Message" />
+									</div>
+								</div>
+							</form>
+
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Footer -->
+			<div id="footer">
+
+				<!-- Copyright -->
+					<ul class="copyright">
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollzer.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
