--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="{% static "myimages/profile/06.jpg" %}" alt="My image"/ ></span>
+							<span class="image avatar48"><img src="myimages/profile/06.jpg" alt="My image"/ ></span>
 							<h1 id="title">Madeline Lewis-Whitfield</h1>
 							<p>Computer Scientist</p>
 						</div>
@@ -166,13 +166,13 @@
 							<div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="#" class="image fit"><img src="{% static "myimages/yoga02.jpg" %}" alt="My image"/></a>
+										<a href="#" class="image fit"><img src="myimages/yoga02.jpg" alt="My image"/></a>
 										<header>
 											<!--<h3>King Pigeon</h3>-->
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="{% static "myimages/plantlight.jpg" %}" alt="My image"/></a>
+										<a href="#" class="image fit"><img src="myimages/plantlight.jpg" alt="My image"/></a>
 										<header>
 											<h3>Aloe</h3>
 										</header>
@@ -180,13 +180,13 @@
 								</div>
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="#" class="image fit"><img src="{% static "myimages/granada.jpg" %}" alt="My image"/></a>
+										<a href="#" class="image fit"><img src="myimages/granada.jpg" alt="My image"/></a>
 										<header>
 											<h3>Granada, Spain</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="{% static "myimages/profile.jpg" %}" alt="My image"/></a>
+										<a href="#" class="image fit"><img src="myimages/profile.jpg alt="My image"/></a>
 										<header>
 											<h3> Shadows from a Marrakech Window</h3>
 										</header>
