my website w/images & fixed links

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="myimages/profile/06.jpg" alt="My image"/ ></span>
+							<span class="image avatar48"><img src="myimages/profile/07.jpg" alt="My image"/ ></span>
 							<h1 id="title">Madeline Lewis-Whitfield</h1>
 							<p>Computer Scientist</p>
 						</div>
@@ -104,9 +104,9 @@
 
                                                         <p>I am currently a junior at the California State University of Sacramento and am
 																												working towards earning my Bachelor's Degree in Computer Science as well as a
-																												certificate in Software Engineering. I work as a developer for the <a href = "http://www.csus.edu/storc/">STORC</a>
+																												certificate in Software Engineering. I work as a developer for the STORC
 																												organization of CSUS and create and maintain Flask applications that dynamically
-																												displays critical data which is used by the <a href = "http://www.csus.edu/storc/">STORC</a>
+																												displays critical data which is used by the STORC
 																												scientists as they grow plants using a hydroponic system.<br><br>
 
 																												The majority of my background is in Java, due to the CSUS curriculum, but through
@@ -120,7 +120,7 @@
 																												  <tr>
 																												    <td><a href = "https://github.com/maddz131">My GitHub</a></td>
 																												    <td><a href = "http://127.0.0.1:8000/blog">Resume/Project Summarys</a></td>
-																												    <td><a href = "http://athena.ecs.csus.edu/~aitkenc/aboutus.html">STORC Developer Team Page</a></td>
+																												    <td><a href = "http://www.csus.edu/storc/index.html">STORC</a></td>
 																												  </tr>
 																												</table>
 																											</p>
@@ -186,7 +186,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="myimages/profile.jpg alt="My image"/></a>
+										<a href="#" class="image fit"><img src="myimages/profile.jpg" alt="My image"/></a>
 										<header>
 											<h3> Shadows from a Marrakech Window</h3>
 										</header>
@@ -194,13 +194,13 @@
 								</div>
 								<div class="4u$ 12u$(mobile)">
 									<article class="item">
-										<a href="#" class="image fit"><img src="{% static "myimages/backpacking.jpg" %}" alt="My image"/></a>
+										<a href="#" class="image fit"><img src= "myimages/backpacking.jpg" alt="My image"/></a>
 										<header>
 											<!--<h3>Backpacking</h3>-->
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="{% static "myimages/ouzazate.jpg" %}" alt="My image"/></a>
+										<a href="#" class="image fit"><img src="myimages/ouzazate.jpg" alt="My image"/></a>
 										<header>
 											<h3>Ouzazate, Morroco</h3>
 										</header>
