--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="css/home_light.css"/>
-		<script type="text/javascript" src="/scripts/styleswitcher.js"></script>
+		<script type="text/javascript" src="js/styleswitcher.js"></script>
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
@@ -25,7 +25,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="myimages/profile/07.jpg" alt="My image"/ ></span>
+							<span class="image avatar48"><img src="myimages/profile/08.jpg" alt="My image"/ ></span>
 							<h1 id="title">Madeline Lewis-Whitfield</h1>
 							<p>Computer Scientist</p>
 						</div>
@@ -255,13 +255,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollzer.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
+			<script src="js/jquery.min.js"></script>
+			<script src="js/jquery.scrolly.min.js"></script>
+			<script src="js/jquery.scrollzer.min.js"></script>
+			<script src="js/skel.min.js"></script>
+			<script src="js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+			<script src="js/main.js"></script>
 
 	</body>
 </html>
