fixed blog link

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 																												<table>
 																												  <tr>
 																												    <td><a href = "https://github.com/maddz131">My GitHub</a></td>
-																												    <td><a href = "http://127.0.0.1:8000/blog">Resume/Project Summarys</a></td>
+																												    <td><a href = "https://maddz131.github.io/blog">Resume/Project Summarys</a></td>
 																												    <td><a href = "http://www.csus.edu/storc/index.html">STORC</a></td>
 																												  </tr>
 																												</table>
