Updated about me content

--- a/index.html
+++ b/index.html
@@ -103,14 +103,13 @@
 
                                                         <p>I am currently a junior at the California State University of Sacramento and am
 																												working towards earning my Bachelor's Degree in Computer Science as well as a
-																												certificate in Software Engineering. I work as a developer for the STORC
-																												organization of CSUS and create and maintain Flask applications that dynamically
-																												displays critical data which is used by the STORC
-																												scientists as they grow plants using a hydroponic system.<br><br>
+																												certificate in Software Engineering. I work as a developer for the Sustainable
+																												Technology Optimization Research Center (STORC). I provide computer support for
+																												the projects there and am involved in the management of their website.<br><br>
 
 																												The majority of my background is in Java, due to the CSUS curriculum, but through
-																												my work as well as outside projects I have gained experience in the Python, BASH, HTML,
-																												CSS, and JavaScript languages as well as the Django and Flask web frameworks.
+																												my work at STORC as well as outside projects I have gained experience in the Python,
+																												C/C++, HTML,CSS, and JavaScript as well as well as the Flask web framework.
 																												My real passion lies in creating a product that serves to benefit the environment
 																												or people in need and, post-graduation, I hope to join a company whose interests align
 																												with mine.<br>
@@ -134,9 +133,7 @@
 																						</header>
 
 																						<p>I have a wide range of interests and have been blessed with many opportunities
-																							 to explore them throughout my life. jkguf gjg uyg h; uyfytd r goyhi gu yf hjhg
-																							 yfghhjkj huhk kjhk jg8yg jyg tyd7tf uhoihjk jlj jo ugj gkjkj pijp 'j;'lj ljlkjl
-																							 jgjhfuhg iugjh iuhkjh kj'lkj pij iuh yg jhgkjh ;kj.
+																							 to explore them throughout my life. Below are the things I find most fulfilling.
 																							 <table>
 																								 <td>
 																									<p align="left"><bold>Travel:</bold><br> I love to travel, and because of my mom's
