--- a/index.html
+++ b/index.html
@@ -109,10 +109,9 @@
 
 																												The majority of my background is in Java, due to the CSUS curriculum, but through
 																												my work at STORC as well as outside projects I have gained experience in the Python,
-																												C/C++, HTML,CSS, and JavaScript as well as well as the Flask web framework.
-																												My real passion lies in creating a product that serves to benefit the environment
-																												or people in need and, post-graduation, I hope to join a company whose interests align
-																												with mine.<br>
+																												C/C++, HTML, CSS, and JavaScript as well as the Flask web framework. My real passion
+																												lies in creating a product that serves to benefit the environment or people in need
+																												and, post-graduation, I hope to join a company whose interests align with mine.<br>
 
 																												<table>
 																												  <tr>
