--- a/index.html
+++ b/index.html
@@ -102,25 +102,25 @@
                                                         <!--<div class="image featured"><a href=""><img src="" alt="My image"/ width="300" height="400"/></a></div>-->
 
                                                         <p>I am currently a junior at the California State University of Sacramento and am
-																												working towards earning my Bachelor's Degree in Computer Science as well as a
-																												certificate in Software Engineering. I work as a developer for the Sustainable
-																												Technology Optimization Research Center (STORC). I provide computer support for
-																												the projects there and am involved in the management of their website.<br><br>
+								working towards earning my Bachelor's Degree in Computer Science as well as a
+								certificate in Software Engineering. I work as a developer for the Sustainable
+								Technology Optimization Research Center (STORC). I provide computer support for
+								the projects there and am involved in the management of their website.<br><br>
+								
+								The majority of my background is in Java, due to the CSUS curriculum, but through
+								my work at STORC as well as outside projects I have gained experience in the Python,
+								C/C++, HTML, CSS, and JavaScript as well as the Flask web framework. My real passion
+								lies in creating a product that serves to benefit the environment or people in need
+								and, post-graduation, I hope to join a company whose interests align with mine.<br>
 
-																												The majority of my background is in Java, due to the CSUS curriculum, but through
-																												my work at STORC as well as outside projects I have gained experience in the Python,
-																												C/C++, HTML, CSS, and JavaScript as well as the Flask web framework. My real passion
-																												lies in creating a product that serves to benefit the environment or people in need
-																												and, post-graduation, I hope to join a company whose interests align with mine.<br>
-
-																												<table>
-																												  <tr>
-																												    <td><a href = "https://github.com/maddz131">My GitHub</a></td>
-																												    <td><a href = "https://maddz131.github.io/blog">Resume/Project Summarys</a></td>
-																												    <td><a href = "http://www.csus.edu/storc/index.html">STORC</a></td>
-																												  </tr>
-																												</table>
-																											</p>
+							<table>
+								 <tr>
+								 <td><a href = "https://github.com/maddz131">My GitHub</a></td>
+								 <td><a href = "https://www.linkedin.com/in/madeline-lewis-whitfield-03b2387a?trk=nav_responsive_tab_profile_pic">LinkedIn</a></td>
+								 <td><a href = "http://www.csus.edu/storc/index.html">STORC</a></td>
+								 </tr>
+							</table>
+						</p>
                                         </section>
 
 				<!-- About Me -->
