--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 								C/C++, HTML, CSS, and JavaScript as well as the Flask web framework. My real passion
 								lies in creating a product that serves to benefit the environment or people in need
 								and, post-graduation, I hope to join a company whose interests align with mine.<br>
-
+							</p>
 							<table>
 								 <tr>
 								 <td><a href = "https://github.com/maddz131">My GitHub</a></td>
@@ -121,45 +121,55 @@
 								 <td><a href = "http://www.csus.edu/storc/index.html">STORC</a></td>
 								 </tr>
 							</table>
-						</p>
+						</div>
                                         </section>
 
 				<!-- About Me -->
-																				<section id="about" class="two">
-																					<div class="container">
+				<section id="about" class="two">
+					<div class="container">
 
-																						<header>
-																							<h2>Personal Interests</h2>
-																						</header>
+						<header>
+							<h2>Personal Interests</h2>
+						</header>
 
-																						<p>I have a wide range of interests and have been blessed with many opportunities
-																							 to explore them throughout my life. Below are the things I find most fulfilling.
-																							 <table>
-																								 <td>
-																									<p align="left"><bold>Travel:</bold><br> I love to travel, and because of my mom's
-																							 	 	equal wanderlust, I have been to Africa (Ethopia, Tanzania, Morroco),
-																									Central America (Guatemala), and Europe (Italy, Spain), as well
-																							 		as many of the States. The new perspective that comes with firsthand
-																									exposure to a different culture is something I think everyone should have
-																									the opportunity to experience.<br><br>
-																									<bold>Spanish:</bold><br> I have an intermediate understanding of the Spanish language
-																							 		and am finishing my fourth year of it this fall. I plan on taking another course
-																							 		in the Spring semester as well, with the hope of working and living in Spain at some
-																							 		point in the near future.</p>
-																						 		</td>
-																								<td>
-																									<p align="left"><bold>Yoga:</bold><br> I was first introduced to yoga in 2014 by a friend who
-																									wanted to try a new method of working out. She quickly realized that it was not for
-																									her, however I have been doing it ever since. Originally I enjoyed it because
-																									of physical challenge it presented, and later turned to it to help with my
-																									anxiety, and after two years it has become a very valued part of my life and
-																									routine. It's focus on self-love and the peace that comes from weekly meditation
-																									is just as important to me as my growing ability to do cool and complex poses.</p>
-																								</td>
-																							</table>
-																						</p>
+						<p>I have a wide range of interests and have been blessed with many opportunities
+						 to explore them throughout my life. Below are the things in life I find most fulfilling.
+						</p>
+						<table>
+							 <td>
+								<p align="left">
+									<bold>Travel:</bold>
+									<br> I love to travel, and because of my mom's
+									equal wanderlust, I have been to Africa (Ethopia, Tanzania, Morroco),
+			 						Central America (Guatemala), and Europe (Italy, Spain) for multiple weeks
+									as well as many of the States. The new perspective that comes with firsthand
+									exposure to a different culture is something I think everyone should have
+									the opportunity to experience.<br><br>
+									
+									<bold>Spanish:</bold>
+									<br> I have an intermediate understanding of the Spanish language
+									and am finishing my fourth year of three and a half years of it last spring.
+									My reading comprehension is greater than my speaking ability which I hope
+									to improve by living and working in a Spanish speaking country at some
+									point in the near future.
+								 </p>
+							 </td>
+							<td>
+								<p align="left">
+									<bold>Yoga:</bold>
+									<br> I was first introduced to yoga in 2014 by a friend who
+									wanted to try a new method of working out. She quickly realized that it was not for
+									her, however I have been doing it ever since. Originally I enjoyed it because
+									of physical challenge it presented, and later turned to it to help with my
+									anxiety. I stuck with it for two years and it became a very valued part of my life and
+									routine. It's focus on self-love and the peace that comes from weekly meditation
+									is just as important to me as my growing ability to do cool and complex poses. I
+									currently haven't practiced it for several months but plan on returning to it soon.
+								</p>
+							</td>
+						</table>
 
-							<div class="row">
+						<div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item">
 										<a href="#" class="image fit"><img src="myimages/yoga02.jpg" alt="My image"/></a>
@@ -192,7 +202,7 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src= "myimages/backpacking.jpg" alt="My image"/></a>
 										<header>
-											<!--<h3>Backpacking</h3>-->
+											<h3>Backpacking the Sierra Nevadas</h3>
 										</header>
 									</article>
 									<article class="item">
@@ -202,10 +212,9 @@
 										</header>
 									</article>
 								</div>
-							</div>
-
 						</div>
-					</section>
+					</div>
+				</section>
 
 				<!-- Contact -->
 					<section id="contact" class="four">
@@ -215,49 +224,32 @@
 								<h2 class = "c"> Contact</h2>
 							</header>
 
-							<p>
 								<table>
 									<td>Phone: (559) 789-5286</td>
 									<td>E-mail: m.lewiswhitfield@gmail.com</td>
 								</table>
-							</p>
-
-							<form method="post" action="#">
-								<div class="row">
-									<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
-									<div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
-									<div class="12u$">
-										<textarea name="message" placeholder="Message"></textarea>
-									</div>
-									<div class="12u$">
-										<input type="submit" value="Send Message" />
-									</div>
-								</div>
-							</form>
-
 						</div>
 					</section>
 
+				<!-- Footer -->
+					<div id="footer">
+
+						<!-- Copyright -->
+							<ul class="copyright">
+								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+
+					</div>
+
+				<!-- Scripts -->
+					<script src="js/jquery.min.js"></script>
+					<script src="js/jquery.scrolly.min.js"></script>
+					<script src="js/jquery.scrollzer.min.js"></script>
+					<script src="js/skel.min.js"></script>
+					<script src="js/util.js"></script>
+					<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+					<script src="js/main.js"></script>
 			</div>
-
-		<!-- Footer -->
-			<div id="footer">
-
-				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="js/jquery.min.js"></script>
-			<script src="js/jquery.scrolly.min.js"></script>
-			<script src="js/jquery.scrollzer.min.js"></script>
-			<script src="js/skel.min.js"></script>
-			<script src="js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="js/main.js"></script>
 
 	</body>
 </html>
