--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="myimages/profile/08.jpg" alt="My image"></span>
-							<br>
+							<img src="myimages/profile/08.jpg" alt="My image"/>
 							<h1 id="title">Madeline Lewis-Whitfield</h1>
 							<p>Computer Scientist</p>
 						</div>
@@ -174,7 +173,7 @@
 									<article class="item">
 										<a href="#" class="image fit"><img src="myimages/yoga02.jpg" alt="My image"/></a>
 										<header>
-											<!--<h3>King Pigeon</h3>-->
+											<h3>King Pigeon Pose</h3>
 										</header>
 									</article>
 									<article class="item">
@@ -224,10 +223,10 @@
 								<h2 class = "c"> Contact</h2>
 							</header>
 
-								<table>
-									<td>Phone: (559) 789-5286</td>
-									<td>E-mail: m.lewiswhitfield@gmail.com</td>
-								</table>
+							<table>
+								<td>Phone: (559) 789-5286</td>
+								<td>E-mail: m.lewiswhitfield@gmail.com</td>
+							</table>
 						</div>
 					</section>
 
