--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<img src="myimages/profile/08.jpg" alt="My image"/>
+							<span class="image avatar48"><image src="myimages/profile/08.jpg" alt="My image"/></span>
 							<h1 id="title">Madeline Lewis-Whitfield</h1>
 							<p>Computer Scientist</p>
 						</div>
