Updated "About Me" in index.html

--- a/index.html
+++ b/index.html
@@ -101,23 +101,25 @@
 
                                                         <!--<div class="image featured"><a href=""><img src="" alt="My image"/ width="300" height="400"/></a></div>-->
 
-                                                        <p>I am currently a junior at the California State University of Sacramento and am
-								working towards earning my Bachelor's Degree in Computer Science as well as a
-								certificate in Software Engineering. I work as a developer for the Sustainable
-								Technology Optimization Research Center (STORC). I provide computer support for
-								the projects there and am involved in the management of their website.<br><br>
+                                                        <p>I am currently a senior at the California State University of Sacramento and will
+								be graduating with my Bachelors Degree in Computer Science in may.
+								I currently work for the Sustainable Technology Optimization Research Center (STORC)
+								at my university and have provided computer support to multiple projects there
+								a few of which can be viewed in the Frontend and ZNE repositories on
+								<a href = "https://github.com/STORC-ECS">GitHub</a>, and manage some of their website content.<br><br>
 								
 								The majority of my background is in Java, due to the CSUS curriculum, but through
-								my work at STORC as well as outside projects I have gained experience in the Python,
-								C/C++, HTML, CSS, and JavaScript as well as the Flask web framework. My real passion
-								lies in creating a product that serves to benefit the environment or people in need
-								and, post-graduation, I hope to join a company whose interests align with mine.<br>
+								my work at STORC as well as through outside projects I have gained some experience
+								working with Python, C/C++, HTML, CSS, JavaScript and C# as well as the ASP.NET CORE framework.
+								I love to learn and am always curious to new languages and tools to accomplish my
+								goals. I enjoy creating things that are valued by others as well as hold a visual appeal which
+								is why I am most interested in securing a job that involves application developement
+								in a team environment.<br>
 							</p>
 							<table>
 								 <tr>
 								 <td><a href = "https://github.com/maddz131">My GitHub</a></td>
 								 <td><a href = "https://www.linkedin.com/in/madeline-lewis-whitfield-03b2387a?trk=nav_responsive_tab_profile_pic">LinkedIn</a></td>
-								 <td><a href = "http://www.csus.edu/storc/index.html">STORC</a></td>
 								 </tr>
 							</table>
 						</div>
@@ -135,9 +137,9 @@
 						 to explore them throughout my life. Below are the things in life I find most fulfilling.
 						</p>
 						<table>
-							 <td>
-								<p align="left">
-									<bold>Travel:</bold>
+							 <td align="left">
+								 <h3>Travel:</h3>
+								<p>
 									<br> I love to travel, and because of my mom's
 									equal wanderlust, I have been to Africa (Ethopia, Tanzania, Morroco),
 			 						Central America (Guatemala), and Europe (Italy, Spain) for multiple weeks
