Update interest table sub headers in index.html

--- a/index.html
+++ b/index.html
@@ -140,24 +140,29 @@
 							 <td align="left">
 								 <h3>Travel:</h3>
 								<p>
-									<br> I love to travel, and because of my mom's
-									equal wanderlust, I have been to Africa (Ethopia, Tanzania, Morroco),
-			 						Central America (Guatemala), and Europe (Italy, Spain) for multiple weeks
-									as well as many of the States. The new perspective that comes with firsthand
+									I love to travel and experience different cultures and have had the
+									opportunity to travel to many different countries during my life.
+									I have been to Africa (Ethopia, Tanzania, Morroco),
+			 						Central America (Guatemala), and Europe (Italy, Spain) each for multiple weeks
+									as well as to many of the States. The new perspective that comes with firsthand
 									exposure to a different culture is something I think everyone should have
-									the opportunity to experience.<br><br>
-									
-									<bold>Spanish:</bold>
+									the opportunity to experience and something I never grow tired of. Traveling
+									so much has helpred me appreciate the value of being able to speak different languages
+									and I hope to be at leaast become fluently bilingual sometime in the near future
+									and have already taken steps to get there.<br><br>
+								 </p>
+								 <h3>Spanish:</h3>
+								 <p>
 									<br> I have an intermediate understanding of the Spanish language
-									and am finishing my fourth year of three and a half years of it last spring.
+									and finished my three and a half years of classes in it last spring.
 									My reading comprehension is greater than my speaking ability which I hope
 									to improve by living and working in a Spanish speaking country at some
 									point in the near future.
 								 </p>
 							 </td>
-							<td>
-								<p align="left">
-									<bold>Yoga:</bold>
+							<td align="left">
+								<h3>Yoga:</h3>
+								<p>
 									<br> I was first introduced to yoga in 2014 by a friend who
 									wanted to try a new method of working out. She quickly realized that it was not for
 									her, however I have been doing it ever since. Originally I enjoyed it because
