--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
 							</p>
 							<table>
 								 <tr>
-								 <td><a href = "https://github.com/maddz131">My GitHub</a></td>
-								 <td><a href = "https://www.linkedin.com/in/madeline-lewis-whitfield-03b2387a?trk=nav_responsive_tab_profile_pic">LinkedIn</a></td>
+								 <td align="center"><a href = "https://github.com/maddz131">My GitHub</a></td>
+								 <td align="center"><a href = "https://www.linkedin.com/in/madeline-lewis-whitfield-03b2387a?trk=nav_responsive_tab_profile_pic">LinkedIn</a></td>
 								 </tr>
 							</table>
 						</div>
@@ -153,7 +153,7 @@
 								 </p>
 								 <h3>Spanish:</h3>
 								 <p>
-									<br> I have an intermediate understanding of the Spanish language
+									I have an intermediate understanding of the Spanish language
 									and finished my three and a half years of classes in it last spring.
 									My reading comprehension is greater than my speaking ability which I hope
 									to improve by living and working in a Spanish speaking country at some
@@ -163,7 +163,7 @@
 							<td align="left">
 								<h3>Yoga:</h3>
 								<p>
-									<br> I was first introduced to yoga in 2014 by a friend who
+									I was first introduced to yoga in 2014 by a friend who
 									wanted to try a new method of working out. She quickly realized that it was not for
 									her, however I have been doing it ever since. Originally I enjoyed it because
 									of physical challenge it presented, and later turned to it to help with my
