Updated minor grammatical errors in index.html

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 								
 								The majority of my background is in Java, due to the CSUS curriculum, but through
 								my work at STORC as well as through outside projects I have gained some experience
-								working with Python, C/C++, HTML, CSS, JavaScript and C# as well as the ASP.NET CORE framework.
-								I love to learn and am always curious to new languages and tools to accomplish my
-								goals. I enjoy creating things that are valued by others as well as hold a visual appeal which
+								working with Python, C/C++, HTML, CSS, JavaScript and C# as well as the ASP.NET core framework.
+								I love to learn and am always curious to explore new languages and tools to accomplish my
+								goals. I enjoy creating things that hold a visual appeal and that are valued by others, which
 								is why I am most interested in securing a job that involves application developement
 								in a team environment.<br>
 							</p>
@@ -147,8 +147,8 @@
 									as well as to many of the States. The new perspective that comes with firsthand
 									exposure to a different culture is something I think everyone should have
 									the opportunity to experience and something I never grow tired of. Traveling
-									so much has helpred me appreciate the value of being able to speak different languages
-									and I hope to be at leaast become fluently bilingual sometime in the near future
+									so much has helped me to appreciate the value of being able to speak different languages.
+									I hope to become at least become fluently bilingual sometime in the near future
 									and have already taken steps to get there.<br><br>
 								 </p>
 								 <h3>Spanish:</h3>
@@ -166,10 +166,10 @@
 									I was first introduced to yoga in 2014 by a friend who
 									wanted to try a new method of working out. She quickly realized that it was not for
 									her, however I have been doing it ever since. Originally I enjoyed it because
-									of physical challenge it presented, and later turned to it to help with my
+									of thephysical challenge it presented and later turned to it to help with my
 									anxiety. I stuck with it for two years and it became a very valued part of my life and
-									routine. It's focus on self-love and the peace that comes from weekly meditation
-									is just as important to me as my growing ability to do cool and complex poses. I
+									routine. Its focus on self-love and the peace that comes from weekly meditation
+									is just as important to me as the growing ability to do cool and complex poses. I
 									currently haven't practiced it for several months but plan on returning to it soon.
 								</p>
 							</td>
@@ -231,8 +231,8 @@
 							</header>
 
 							<table>
-								<td>Phone: (559) 789-5286</td>
-								<td>E-mail: m.lewiswhitfield@gmail.com</td>
+								<td align="center">Phone: (559) 789-5286</td>
+								<td align="center">E-mail: m.lewiswhitfield@gmail.com</td>
 							</table>
 						</div>
 					</section>
@@ -242,7 +242,8 @@
 
 						<!-- Copyright -->
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Untitled. All rights reserved.</li>
+								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 
 					</div>
