fixed footer, switched to dark background

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="css/home_light.css"/>
+		<link rel="stylesheet" href="css/home_dark.css"/>
 		<script type="text/javascript" src="js/styleswitcher.js"></script>
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
@@ -107,7 +107,7 @@
 								at my university and have provided computer support to multiple projects there
 								a few of which can be viewed in the Frontend and ZNE repositories on
 								<a href = "https://github.com/STORC-ECS">GitHub</a>, and manage some of their website content.<br><br>
-								
+
 								The majority of my background is in Java, due to the CSUS curriculum, but through
 								my work at STORC as well as through outside projects I have gained some experience
 								working with Python, C/C++, HTML, CSS, JavaScript and C# as well as the ASP.NET core framework.
