--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.facebook.com/maddie.lewiswhitfield" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="https://github.com/maddz131" class="icon fa-github"><span class="label">Github</span></a></li>
+							<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li> -->
 						</ul>
 
 				</div>
